# my-calculator-project

./: .gitignore  CMakeLists.txt  Doxyfile
.github/workflows/: ci.yml
docs/: calculator_8h_source.html  files.html  graph_legend.html
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
src/: calculator.cpp  calculator.h  main.cpp
tests/: test_calculator.cpp
